RuleNode: Fix calculation of changed inputs
The old code had a number of problems:
- It partially overlapped with the calculation of compatible inputs.
- It was wrong in that it failed to consider inputs from dependencies.
- It was wrong in that it assumed that after rule application, input
artifacts always have parent artifacts to later compare timestamps with.
This is not the case for e.g. a generated cpp file without a Q_OBJECT
macro on which moc is run: No transformer is created in such a case,
because the outputArtifacts array is empty.
The last problem was glossed over by the fact that we held a global list
of "changed source artifacts" in the executor, so such changes were
spotted when they happened in source artifacts. However, that code was
also rather dubious in itself because the criterion for "changed" was
that the timestamp was newer than it was on the last run of the
executor, so I don't think it was completely safe when doing partial
builds.
We solve these problems by remembering when we last applied the rule. An
input artifact is considered "changed" if it has been modified after
that.

Change-Id: Ib1bafd9e1078122776626155c4f2cc11ad622191
Reviewed-by: Joerg Bornemann <joerg.bornemann@qt.io>

--- a/tests/auto/blackbox/testdata-qt/add-qobject-macro-to-generated-cpp-file/object.cpp.in
+++ b/tests/auto/blackbox/testdata-qt/add-qobject-macro-to-generated-cpp-file/object.cpp.in
@@ -1,6 +1,6 @@
 /****************************************************************************
 **
-** Copyright (C) 2016 The Qt Company Ltd.
+** Copyright (C) 2018 The Qt Company Ltd.
 ** Contact: https://www.qt.io/licensing/
 **
 ** This file is part of Qbs.
@@ -26,47 +26,16 @@
 **
 ****************************************************************************/
 
-#ifndef TST_BLACKBOXQT_H
-#define TST_BLACKBOXQT_H
+#include <object.h>
 
-#include "tst_blackboxbase.h"
+#include <QObject>
 
-class TestBlackboxQt : public TestBlackboxBase
-{
-    Q_OBJECT
+// class InternalClass : public QObject
+// {
+//    Q_OBJECT
+// };
 
-public:
-    TestBlackboxQt();
+void Object::f() { }
 
-protected:
-    void validateTestProfile() override;
 
-private slots:
-    void addQObjectMacroToGeneratedCppFile();
-    void autoQrc();
-    void cachedQml();
-    void combinedMoc();
-    void createProject();
-    void dbusAdaptors();
-    void dbusInterfaces();
-    void lrelease();
-    void mixedBuildVariants();
-    void mocAndCppCombining();
-    void mocFlags();
-    void mocSameFileName();
-    void pkgconfig();
-    void pluginMetaData();
-    void qmlDebugging();
-    void qobjectInObjectiveCpp();
-    void qtKeywords();
-    void quickCompiler();
-    void qtScxml();
-    void removeMocHeaderFromFileList();
-    void staticQtPluginLinking();
-    void trackAddMocInclude();
-    void track_qobject_change();
-    void track_qrc();
-    void unmocable();
-};
-
-#endif // TST_BLACKBOXQT_H
+// #include <object.moc>
