Update and optimize the Docker infrastructure
- Extend Qt installation to enable Qbs autotests and building docs
  (QtDeclarative and QtTools, libclang were missing).
- Add Qt to PATH in the container
- Allow users of docker-compose to override the Docker username
  so that they can potentially use their own repositories
  without changing the file.
- Fix error in the entrypoint script which didn't work when
  running the container without arguments.
- Replace the non-interesting output of building Qt with dots because
  the log exceeded the maximum log length on Travis CI,
  but being entirely silent triggered the watchdog.

Task-number: QBS-1438
Change-Id: Ibd3abacadfc001db5169a9a3fffce908f8e6e760
Reviewed-by: Joerg Bornemann <joerg.bornemann@qt.io>

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ version: "3.3"
 
 services:
   stretch:
-    image: qbsdev:stretch
+    image: ${DOCKER_USER:-qbsbuild}/qbsdev:stretch
     build:
       dockerfile: Dockerfile
       context: docker/stretch/
