Add Ubuntu 18.04 Docker image
Contains:
- Qbs 1.13.1 (from QtCreator 4.9.2)
- Qt 5.12.4 for Linux (prebuilt)
- Qt 5.12.4 for Windows (compiled from source)
- gcc 7.4
- mingw-w64 (7.3)

This image can build Qbs and all its components for Linux
and Windows targets. It might supersede Debian stretch which
is not officially supported by Qt 5.12.

The only limitation is that it can neither build Chocolatey
packages nor run windeployqt.

Change-Id: Icee1f002483f68839d39c8c152a9c5d886dabcfb
Reviewed-by: Christian Kandeler <christian.kandeler@qt.io>

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,28 @@
-version: "3.3"
+version: "3.7"
+
+x-default-service: &linux
+  working_dir: /qbs
+  volumes:
+    - .:/qbs
+  network_mode: bridge
+  cap_add:
+      - SYS_PTRACE
 
 services:
+  bionic:
+    << : *linux
+    hostname: bionic
+    image: ${DOCKER_USER:-qbsbuild}/qbsdev:bionic
+    build:
+      dockerfile: docker/bionic/Dockerfile
+      context: .
+      args:
+        QT_VERSION: 5.12.4
+        QTCREATOR_VERSION: 4.9.2
+
   stretch:
+    << : *linux
+    hostname: stretch
     image: ${DOCKER_USER:-qbsbuild}/qbsdev:stretch
     build:
       dockerfile: docker/stretch/Dockerfile
@@ -9,9 +30,3 @@ services:
       args:
         QT_VERSION: 5.12.4
         QTCREATOR_VERSION: 4.9.2
-    working_dir: /qbs
-    volumes:
-      - .:/qbs
-    network_mode: bridge
-    cap_add:
-        - SYS_PTRACE
