--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,10 @@ language: cpp
 git:
   submodules: false
 
+env:
+  global:
+    - QT_INSTALL_DIR=~/Qt
+
 stages:
   - name: Build Qbs and and run autotests
 
@@ -44,22 +48,12 @@ jobs:
         # Address sanitizer slows autotests down too much.
         # We would hit the maximum build time on Travis.
         BUILD_OPTIONS=modules.qbsbuildconfig.enableAddressSanitizer:false
-        QT_INSTALL_DIR=/Users/travis/Qt
         QMAKE_PATH=${QT_INSTALL_DIR}/5.12.4/clang_64/bin/qmake
         PATH="${QT_INSTALL_DIR}/Qt Creator.app/Contents/MacOS:${PATH}"
         QBS_BUILD_PROFILE=qt
       before_install:
-        - curl -L -o qtbase.7z        http://master.qt.io/online/qtsdkrepository/mac_x64/desktop/qt5_5124/qt.qt5.5124.clang_64/5.12.4-0-201906140148qtbase-MacOS-MacOS_10_13-Clang-MacOS-MacOS_10_13-X86_64.7z
-        - curl -L -o qtdeclarative.7z http://master.qt.io/online/qtsdkrepository/mac_x64/desktop/qt5_5124/qt.qt5.5124.clang_64/5.12.4-0-201906140148qtdeclarative-MacOS-MacOS_10_13-Clang-MacOS-MacOS_10_13-X86_64.7z
-        - curl -L -o qttools.7z       http://master.qt.io/online/qtsdkrepository/mac_x64/desktop/qt5_5124/qt.qt5.5124.clang_64/5.12.4-0-201906140148qttools-MacOS-MacOS_10_13-Clang-MacOS-MacOS_10_13-X86_64.7z
-        - curl -L -o qtscript.7z      http://master.qt.io/online/qtsdkrepository/mac_x64/desktop/qt5_5124/qt.qt5.5124.qtscript.clang_64/5.12.4-0-201906140148qtscript-MacOS-MacOS_10_13-Clang-MacOS-MacOS_10_13-X86_64.7z
-        - curl -L -o qtcreator.7z     http://master.qt.io/online/qtsdkrepository/mac_x64/desktop/tools_qtcreator/qt.tools.qtcreator/4.9.1-0qtcreator.7z
-        - 7z x -o${QT_INSTALL_DIR} qtbase.7z
-        - 7z x -o${QT_INSTALL_DIR} qtdeclarative.7z
-        - 7z x -o${QT_INSTALL_DIR} qttools.7z
-        - 7z x -o${QT_INSTALL_DIR} qtscript.7z
-        - 7z x -o${QT_INSTALL_DIR} qtcreator.7z
-        - printf "[Paths]\nPrefix = ..\n" > ${QT_INSTALL_DIR}/5.12.4/clang_64/bin/qt.conf
+        - ./scripts/install-qt.sh -d ${QT_INSTALL_DIR} --version 5.12.4 qtbase qtdeclarative qttools qtscript
+        - ./scripts/install-qt.sh -d ${QT_INSTALL_DIR} --version 4.9.2 qtcreator
         - pip2 install --user beautifulsoup4 lxml
       script:
         - qbs setup-toolchains --detect
@@ -99,17 +93,8 @@ jobs:
         - powershell -Command 'Add-MpPreference -ExclusionProcess link.exe'
 
         # Install Qbs and Qt
-        - curl -L -o qtbase.7z        http://master.qt.io/online/qtsdkrepository/windows_x86/desktop/qt5_5124/qt.qt5.5124.win64_msvc2017_64/5.12.4-0-201906140149qtbase-Windows-Windows_10-MSVC2017-Windows-Windows_10-X86_64.7z
-        - curl -L -o qtdeclarative.7z http://master.qt.io/online/qtsdkrepository/windows_x86/desktop/qt5_5124/qt.qt5.5124.win64_msvc2017_64/5.12.4-0-201906140149qtdeclarative-Windows-Windows_10-MSVC2017-Windows-Windows_10-X86_64.7z
-        - curl -L -o qttools.7z       http://master.qt.io/online/qtsdkrepository/windows_x86/desktop/qt5_5124/qt.qt5.5124.win64_msvc2017_64/5.12.4-0-201906140149qttools-Windows-Windows_10-MSVC2017-Windows-Windows_10-X86_64.7z
-        - curl -L -o qtscript.7z      http://master.qt.io/online/qtsdkrepository/windows_x86/desktop/qt5_5124/qt.qt5.5124.qtscript.win64_msvc2017_64/5.12.4-0-201906140149qtscript-Windows-Windows_10-MSVC2017-Windows-Windows_10-X86_64.7z
-        - curl -L -o qtcreator.7z     http://master.qt.io/online/qtsdkrepository/windows_x86/desktop/tools_qtcreator/qt.tools.qtcreator/4.9.2-0qtcreator.7z
-        - 7z x -o${QT_INSTALL_DIR} qtbase.7z
-        - 7z x -o${QT_INSTALL_DIR} qtdeclarative.7z
-        - 7z x -o${QT_INSTALL_DIR} qttools.7z
-        - 7z x -o${QT_INSTALL_DIR} qtscript.7z
-        - 7z x -o${QT_INSTALL_DIR} qtcreator.7z
-        - echo -e "[Paths]\nPrefix = .." > $(dirname ${QMAKE_PATH})/qt.conf
+        - ./scripts/install-qt.sh -d ${QT_INSTALL_DIR} --version 5.12.4 --toolchain win64_msvc2017_64 qtbase qtdeclarative qttools qtscript
+        - ./scripts/install-qt.sh -d ${QT_INSTALL_DIR} --version 4.9.2 qtcreator
       script:
         - qbs setup-toolchains --detect
         - qbs setup-qt ${QMAKE_PATH} qt
