Switch to Qt installer script in Docker container
Use the official packages instead of compiling Qt ourselves.
This simplifies the Docker image a lot. For accessing the
script folder, the Docker context needs to change to the
root directory. Thus, we need a .dockerignore file to keep
the size of the context low.

Change-Id: I58ec8f364feba955518f1eaf5bff234332ae8dec
Reviewed-by: Jörg Bornemann <joerg.bornemann@qt.io>

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,11 +4,11 @@ services:
   stretch:
     image: ${DOCKER_USER:-qbsbuild}/qbsdev:stretch
     build:
-      dockerfile: Dockerfile
-      context: docker/stretch/
+      dockerfile: docker/stretch/Dockerfile
+      context: .
       args:
-        QT_VERSION: 5.11.3
-        QBS_VERSION: 1.13.0
+        QT_VERSION: 5.12.4
+        QTCREATOR_VERSION: 4.9.2
     working_dir: /qbs
     volumes:
       - .:/qbs
